<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pocketclinic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.pocketclinic.ui.calendar.CalendarFragment"
        android:label="title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <activity
        android:id="@+id/navigation_messages"
        android:name="com.example.pocketclinic.MessagesActivity"
        android:label="@string/title_messages"
        tools:layout="@layout/activity_messages" />
    <activity
        android:id="@+id/expedientes"
        android:name="com.example.pocketclinic.activities.MainExpedientes"
        android:label="@string/expedientes"
        tools:layout="@layout/opciones_expedientes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pocketclinic.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>