<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/etPatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/patient_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/etPatFechaEgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/patient_leave_date"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="98dp" />

    <EditText
        android:id="@+id/etPatFechaIngreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/join_date"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="393dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="166dp" />

    <EditText
        android:id="@+id/etPatDiagI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/initial_diag"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
        android:id="@+id/etPatDiagE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/final_diag"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/etPatTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="371dp" />

    <EditText
        android:id="@+id/etPatDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/direction"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="439dp" />

    <EditText
        android:id="@+id/etPatCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />
    <EditText
        android:id="@+id/etPatEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />
    <EditText
        android:id="@+id/etPatMunicipio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/municipio"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />
    <EditText
        android:id="@+id/etPatAlergias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/alergias"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />

    <EditText
        android:id="@+id/etPatInstancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/d_as_de_instancia"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />

    <EditText
        android:id="@+id/etPatNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="507dp" />


    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="138dp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="576dp" />


</LinearLayout>
</ScrollView>