<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:backgroundTint="#040303"
    tools:context=".activities.InsertPatients"
    tools:ignore="ExtraText">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="691dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/datos_del_paciente"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_name"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/nombre_del_paciente"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editTextDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_egreso"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/diagn_stico_de_egreso"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_ingreso"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/diagn_stico_de_ingreso"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editText7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etForm_egresofecha"
                android:layout_width="380dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fecha_de_egreso"
                android:inputType="date"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_alergy"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/alergias"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etForm_instancia"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/d_as_de_instancia"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editText5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etForm_ingresofecha"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fecha_de_ingreso"
                android:inputType="date"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editTextDate3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etForm_nacimiento"
                android:layout_width="380dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fecha_de_nacimiento"
                android:inputType="date"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/datos_de_contacto"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="602dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_telefono"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/tel_fono"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/editTextDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_estado"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/estado"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_municipio"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/municipio"
                app:layout_constraintBottom_toTopOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForm_direccion"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:hint="@string/direcci_n"
                app:layout_constraintBottom_toTopOf="@+id/editText7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etForm_correo"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editText5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/etSaveData"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_gravity="center|end"
                android:text="@string/registrar_paciente" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>